--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                               <div class="image_1"><img src="images/img-1.png"></div>
                            </div>
                            <div class="col-md-5">
-                              <h1 class="banner_taital">New Model Cycle</h1>
-                              <p class="banner_text">It is a long established fact that a reader will be distracted by the readable content </p>
+                              <h1 class="banner_taital">New E-Bike Design</h1>
+                              <p class="banner_text">Ergonomic, Safe, Best Storage, Efficient </p>
                               <div class="contact_bt"><a href="contact.html">Shop Now</a></div>
                            </div>
                         </div>
