--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <!-- header section start -->
       <div class="header_section header_bg">
          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a href="index.html" class="logo"><img src="images/logo.png"></a>
+            <a href="index.html" class="logo"><img src="images/logo.png" style="width: 140px;height: 130px;"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -87,7 +87,7 @@
                               <div class="image_1"><img src="images/img-1.png"></div>
                            </div>
                            <div class="col-md-5">
-                              <h1 class="banner_taital">New E-Bike Design</h1>
+                              <h1 class="banner_taital">New <br> E-Bike Design</h1>
                               <p class="banner_text">Ergonomic, Safe, Best Storage, Efficient </p>
                               <div class="contact_bt"><a href="contact.html">Shop Now</a></div>
                            </div>
@@ -102,8 +102,8 @@
                               <div class="image_1"><img src="images/img-1.png"></div>
                            </div>
                            <div class="col-md-5">
-                              <h1 class="banner_taital">New Model Cycle</h1>
-                              <p class="banner_text">It is a long established fact that a reader will be distracted by the readable content </p>
+                              <h1 class="banner_taital">New <br> Storage <br> Container</h1>
+                              <p class="banner_text"> Ergonomically designed for storing hot and cold items, optimal of delivery services</p>
                               <div class="contact_bt"><a href="contact.html">Shop Now</a></div>
                            </div>
                         </div>
@@ -117,8 +117,8 @@
                               <div class="image_1"><img src="images/img-1.png"></div>
                            </div>
                            <div class="col-md-5">
-                              <h1 class="banner_taital">New Model Cycle</h1>
-                              <p class="banner_text">It is a long established fact that a reader will be distracted by the readable content </p>
+                              <h1 class="banner_taital">New <br> E-Bike </h1>
+                              <p class="banner_text">Most efficient product for hauling fresh food and groceries, guaranteed to satisfy every customer. </p>
                               <div class="contact_bt"><a href="contact.html">Shop Now</a></div>
                            </div>
                         </div>
@@ -139,8 +139,8 @@
       <!-- cycle section start -->
       <div class="cycle_section layout_padding">
          <div class="container">
-            <h1 class="cycle_taital">Our cycle</h1>
-            <p class="cycle_text">It is a long established fact that a reader will be distracted by the </p>
+            <h1 class="cycle_taital">Our Bike</h1>
+            <p class="cycle_text"></p>
             <div class="cycle_section_2 layout_padding">
                <div class="row">
                   <div class="col-md-6">
