--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                      </div>
                   </div>
                   <div class="col-md-6">
-                     <h1 class="cycles_text">Cycles</h1>
-                     <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                     <h1 class="cycles_text">Fresh Haul E-Bike</h1>
+                     <p class="lorem_text">Our e-bikes feature a distinctive front-mounted cargo design, prioritizing gyroscopic stability and enhanced mobility. This forward cargo placement not only ensures superior balance but also unlocks unparalleled convenience and efficiency, particularly for food and grocery deliveries. With our ergonomically crafted e-bikes, navigating through urban environments becomes effortlessly smooth, offering riders an unparalleled delivery experience.</p>
                      <div class="btn_main">
                         <div class="buy_bt"><a href="#">Buy Now</a></div>
                         <h4 class="price_text">Price <span style=" color: #f7c17b">$</span> <span style=" color: #325662">200</span></h4>
@@ -162,8 +162,8 @@
             <div class="cycle_section_3 layout_padding">
                <div class="row">
                   <div class="col-md-6">
-                     <h1 class="cycles_text">Stylis Cycle</h1>
-                     <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                     <h1 class="cycles_text">Fresh Haul E-Bike</h1>
+                     <p class="lorem_text">Storage Capacity: <br> Battery Life: <br> Top Speed: <br> Electrical Power Assisted Vehicle specific details about the e-bike here, storage capacity, battery life, top speed, eletrical</p>
                      <div class="btn_main">
                         <div class="buy_bt"><a href="#">Buy Now</a></div>
                         <h4 class="price_text">Price <span style=" color: #f7c17b">$</span> <span style=" color: #325662">200</span></h4>
@@ -186,8 +186,8 @@
                      </div>
                   </div>
                   <div class="col-md-6">
-                     <h1 class="cycles_text">Mordern <br>Cycle</h1>
-                     <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                     <h1 class="cycles_text">Mordern <br> Delivery <br> E-Bikes </h1>
+                     <p class="lorem_text"></p>
                      <div class="btn_main">
                         <div class="buy_bt"><a href="#">Buy Now</a></div>
                         <h4 class="price_text">Price <span style=" color: #f7c17b">$</span> <span style=" color: #325662">200</span></h4>
