Fresh Haul Details Updated

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Cycle</title>
+      <title>E-Bike Fresh Haul</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -44,15 +44,7 @@
                   <li class="nav-item active">
                      <a class="nav-link" href="index.html">Home</a>
                   </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="about.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="cycle.html">Our Cycle</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="shop.html">Shop</a>
-                  </li>
+                 
                   
                   <li class="nav-item">
                      <a class="nav-link" href="contact.html">Contact Us</a>
@@ -153,7 +145,7 @@
                <div class="row">
                   <div class="col-md-6">
                      <h1 class="cycles_text">Fresh Haul E-Bike</h1>
-                     <p class="lorem_text">Storage Capacity: <br> Battery Life: <br> Top Speed: <br> Electrical Power Assisted Vehicle specific details about the e-bike here, storage capacity, battery life, top speed, eletrical</p>
+                     <p class="lorem_text">Storage Capacity: 8 KG <br> Battery Life: 6-8 Hours  <br> Top Speed: 25 km/h <br> Electrical Power Assisted Vehicle </p>
                      <div class="btn_main">
                         <div class="buy_bt"><a href="#">Buy Now</a></div>
                         <h4 class="price_text">Price <span style=" color: #f7c17b">$</span> <span style=" color: #325662">2000</span></h4>
@@ -177,10 +169,10 @@
                   </div>
                   <div class="col-md-6">
                      <h1 class="cycles_text">Storage <br> Containers <br> </h1>
-                     <p class="lorem_text"></p>
+                     <p class="lorem_text">Fresh Haul's innovative storage container tackles the issue of cold or stale food deliveries with a dual-section design: one for hot items and one for cold. Utilizing a thermoelectric cooler powered by a Peltier plate, it ensures optimal temperature control, keeping food fresh and delicious during transit</p>
                      <div class="btn_main">
                         <div class="buy_bt"><a href="#">Buy Now</a></div>
-                        <h4 class="price_text">Price <span style=" color: #f7c17b">$</span> <span style=" color: #325662">300</span></h4>
+                        <h4 class="price_text">Price <span style=" color: #f7c17b">$</span> <span style=" color: #325662">400</span></h4>
                      </div>
                   </div>
                </div>
@@ -195,8 +187,7 @@
       <div class="about_section layout_padding">
          <div class="container">
             <h1 class="about_taital">About Our Storage Container</h1>
-            <p class="about_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
-            </p>
+            <p class="about_text">Fresh Haul's pioneering storage container is meticulously designed to combat the all-too-common problem of food arriving cold or stale during delivery. Recognizing the importance of maintaining optimal food temperature, our container features a dual-section layout, separating hot and cold items to preserve their freshness and flavor. Through extensive research and development, we've integrated cutting-edge thermoelectric cooling technology, powered by a highly efficient Peltier plate system. This advanced setup ensures precise temperature control throughout the delivery process, guaranteeing that every meal, from steaming entrees to refreshing beverages, arrives at its destination in perfect condition. With Fresh Haul, enjoy the assurance of quality, taste, and satisfaction with every delivery.</p>
             <div class="about_main">
                <img src="images/img-5.png" class="image_5">
             </div>
