--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
       <title>E-Bike Fresh Haul</title>
+      <link rel="icon" type="image/x-icon" href="/images/favicon.png">
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
